# AegisCore

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  aegiscore.toml
frontend/: index.html
frontend/assets/: app.js  app.ts  styles.css
skills/: bug-audit-fix-prompt.md  discussion.md  frontend-bug-reproducer.md  github_commit.md  github_pr.md  image_generation.md  medium_article_discovery.md  paper_research.md  pdf_summaries.md  prompt_refiner.md  python_ai_ml_project_setup.md  rust_ai_ml_project_setup.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/codex/: mod.rs
src/config/: mod.rs  model.rs
src/mcp/: mod.rs
src/modules/: core.rs  mod.rs
src/providers/: codex.rs  custom.rs  local.rs  mcp.rs  mod.rs  openai.rs
src/registry/: mod.rs  skill_registry.rs  tool_registry.rs
src/runtime/: agent_runtime.rs  mod.rs  openai_types.rs
src/server/: mod.rs  state.rs
src/skills/: mod.rs  schema.rs  spec.rs  store.rs
src/tools/builtin/: fs.rs  http.rs  json_query.rs  mod.rs  shell.rs  summarize.rs
